Modify sla resource to decouple post and put method
